--- a/src/components/App.css
+++ b/src/components/App.css
@@ -49,7 +49,12 @@
   bottom: 30%;
   left: 10%;
 } */
-
+.love-heart {
+  position:absolute;
+  
+ 
+  color: red;
+}
 
 .featured img {
   width: 100%;
@@ -111,7 +116,7 @@
 .cards {
   display: grid;
   grid-template-columns: auto auto auto auto; 
-  gap: 2rem;
+  gap: 3rem;
   justify-content: center;
   flex-wrap: wrap;
   list-style: none;
