--- a/src/components/App.css
+++ b/src/components/App.css
@@ -160,3 +160,40 @@
   margin-left: 20px;
 
 }
+.one-movie-card {
+  display: grid;
+  grid-template-rows: 449px 150px 183px 100px;
+  grid-template-columns: 1198px 360px;
+  margin-left: 30px;
+  margin-top: 10px;
+}
+.item-1 {
+  grid-row: 1/2;
+  grid-column: 1/3;
+  background-color: yellow;
+}
+.item-2 {
+  grid-row: 2/3;
+  grid-column: 1/2;
+  background-color: #ecb9b9;
+}
+.item-3 {
+  grid-row: 3/4;
+  grid-column: 1/2;
+  background-color: #79b4dc;
+}
+.item-4 {
+  grid-row: 2/3;
+  grid-column: 2/3;
+  background-color: #c14fc1;
+}
+.item-5 {
+  grid-row: 3/4;
+  grid-column: 2/3;
+  background-color: #d49331;
+}
+.item-6 {
+  grid-row: 4/5;
+  grid-column: 1/2;
+  background-color: #d49331;
+}
