--- a/src/components/App.css
+++ b/src/components/App.css
@@ -5,75 +5,25 @@
   --main-color:  white;
 }
 .loader {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	width: 80px;
-	height: 80px;
-	transform: translate(-50%, -50%) rotate(45deg) translate3d(0,0,0);
-	animation: loader 1.2s infinite ease-in-out;
+  border: 16px solid #f3f3f3; /* Light grey */
+  border-top: 16px solid red; /* Blue */
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+  top: 50%;
+        left: 50%;
+
+        transform: translate(-50%, -50%);
+
+        position: fixed;
 }
 
-	#span {
-		position: absolute;
-		display: block;
-		width: 40px;
-		height: 40px;
-		background-color: #EE4040;
-		animation: loaderBlock 1.2s infinite ease-in-out both;
-
-		&:nth-child(1) {
-			top: 0;
-			left: 0;
-		}
-		&:nth-child(2) {
-			top: 0;
-			right: 0;
-			animation: loaderBlockInverse 1.2s infinite ease-in-out both;
-		}
-		&:nth-child(3) {
-			bottom: 0;
-			left: 0;
-			animation: loaderBlockInverse 1.2s infinite ease-in-out both;
-		}
-		&:nth-child(4) {
-			bottom: 0;
-			right: 0;
-		}
-	}
-.loading{
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #242424;
-  z-index: var(loading-z-index);
-  display: flex;
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
 
-.loading-content{
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.loading-content img{
-  display: block;
-  width: 100%;
-  max-width: 250px;
-  margin-bottom: 25px;
-}
-
-.loading-content i{
-  margin-top: 2px;
-  font-size: 28px;
-  color: #ababab;
-  animation: spin forwards linear infinite 2s;
-}
 .featured {
   height: 90vh;
   position: relative;
@@ -197,52 +147,12 @@
 
 }
 .one-movie-card {
-  /* display: grid;
-  grid-template-rows: 449px 150px 183px 100px;
-  grid-template-columns: 1198px 360px; */
-  margin-left: 30%;
+ margin-left: 30%;
   margin-top: 10px;
   display: grid;
   gap: 3rem;
 }
-.item-1 img {
-  object-fit: fill;
-}
-.item-1 {
-  grid-row: 1/2;
-  grid-column: 1/3;
-  background-color: yellow;
-}
-.item-2 {
-  grid-row: 2/3;
-  grid-column: 1/2;
-  background-color: #ecb9b9;
-}
-.item-3 {
-  grid-row: 3/4;
-  grid-column: 1/2;
-  background-color: #79b4dc;
-}
-.item-4 {
-  grid-row: 2/3;
-  grid-column: 2/3;
-  background-color: #c14fc1;
-}
-.item-5 {
-  grid-row: 3/4;
-  grid-column: 2/3;
-  background-color: #d49331;
-}
-.item-6 {
-  grid-row: 4/5;
-  grid-column: 1/2;
-  background-color: #d49331;
-}
-.movie-details {
-  display: flex;
-  flex-direction: row;
-  /* justify-content: space-between; */
-}
+
 .one-movie-buttons  {
   display: flex;
   flex-direction: row;
