--- a/src/components/App.css
+++ b/src/components/App.css
@@ -2,7 +2,7 @@
   --primary-color: #ff000;
   --dropdown-z-index: 15;
   --loading-z-index:20;
-  --main-color:  white;
+  --main-color:  whi
 }
 .loader {
   border: 16px solid #f3f3f3; /* Light grey */
