--- a/src/components/App.css
+++ b/src/components/App.css
@@ -4,6 +4,187 @@
   --loading-z-index:20;
   --main-color:  whi
 }
+body {
+  font-family: "Roboto", sans-serif;
+}
+.navbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 80px;
+  width: 100%;
+  height: 70px;
+ background: transparent;
+
+
+}
+.navbar-container {
+  display: flex;
+  align-items: center;
+  background: transparent;
+  padding: 0 50px;
+  height: 100%;
+  justify-content: space-between;
+  /* padding-top: 5px; */
+}
+.logo-container {
+  display: flex;
+  flex-direction: row;
+
+
+}
+.search {
+  width: 350px;
+  text-align: center;
+
+  position: relative;
+  display: block;
+  margin: auto;
+  padding: 2rem;
+}
+
+.searchTerm {
+  text-align: center;
+  width: 100%;
+  border: 1px solid #f3ebed;
+  padding: 5px;
+  height: 2rem;
+  border-radius: 5px;
+  outline: none;
+  font-size: 14px;
+  background: transparent;
+
+
+
+}
+.search-icon {
+  position: absolute;
+  top: 50%;
+  right: 44px;
+  transform: translateY(-50%);
+  color: #777;
+  font-size: 20px;
+}
+
+.logo {
+ padding-top: 5px;
+ display: flex;
+ flex-direction: row;
+ gap: 2rem;
+}
+.logo span {
+  color: white;
+  margin-top: 10px;
+  font-size: large;
+  font-weight: bold;
+}
+.auth {
+  display: flex;
+  align-items: center;
+}
+.auth span {
+  margin-right: 20px;
+}
+.icon {
+  background-color: #be123c;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+
+.icon svg {
+  color: white;
+  background-color: #be123c;
+  font-size: 13px;
+  padding: 6px;
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.2);
+}
+.header {
+  background-image: url("../images/poster.png");
+  height: 600px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 0px 5%;
+  color: white;
+}
+
+.text-box {
+  margin-top: 50px;
+}
+
+.header h1 {
+  font-size: 50px;
+}
+
+.header .ratings {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 200px;
+  margin: 20px 0px;
+}
+
+.header .ratings span {
+  display: flex;
+  align-items: center;
+}
+
+.header .ratings span small {
+  margin-left: 10px;
+}
+
+.header p {
+  width: 350px;
+  line-height: 2rem;
+}
+
+.header a {
+  background-color: #be123c;
+  color: whtie;
+  text-decoration: none;
+  display: flex;
+  color: white;
+  align-items: center;
+  justify-content: center;
+  border-radius: 3px;
+  padding: 10px;
+  width: 150px;
+  margin-top: 20px;
+}
+.header a svg {
+  margin-right: 5px;
+}
+
+@media screen and (max-width: 600px) {
+  .header {
+    text-align: center;
+  }
+  .header h1 {
+    font-size: 40px;
+  }
+  .header p {
+    width: 300px;
+    margin: auto;
+  }
+  .header a {
+    margin: auto;
+    width: 150px;
+    margin-top: 20px;
+  }
+}
+/* .menu-container {
+  flex: 1;
+}
+.profile-container {
+  flex: 1;
+} */
 .loader {
   border: 16px solid #f3f3f3; /* Light grey */
   border-top: 16px solid red; /* Blue */
@@ -35,6 +216,7 @@
   bottom: 30%;
   left: 10%;
 } */
+
 .love-heart {
   position:relative;
   top: 29px;
